# LiteResearch

./: .gitignore  CLAUDE.md  README.md  README_zh.md  env.example  pyproject.toml  run_app.py
backend/literesearch/: constants.py  embedding_service.py  literesearch_agent.py  literesearch_config.py  literesearcher.py  research_enums.py  research_prompts.py  web_retriever.py
frontend/: literesearch_app.py  ui_components.py
utils/: env_loader.py  langfuse_tools.py  llm_tools.py
